ADD: Descripción de tareas pt1

--- a/Descripción de las tareas/Búsqueda e investigación.tex
+++ b/Descripción de las tareas/Búsqueda e investigación.tex
@@ -1,1 +1,2 @@
-\subsection{Búsqueda e investigación}\label{ssec:Descripción de las tareas}
+\subsubsection{Búsqueda e investigación}\label{ssec:Descripción de las tareas}
+Esta sección detalla las tareas asociadas a la búsqueda e investigación necesarias para el desarrollo del proyecto.
