--- a/Descripción de las tareas/main.tex
+++ b/Descripción de las tareas/main.tex
@@ -1,4 +1,4 @@
-\section{Descripción de las tareas}
+\subsection{Descripción de las tareas}
 
 \input{Descripción de las tareas/Gestión del proyecto}
 
