--- a/Descripción de las tareas/Búsqueda e investigación.tex
+++ b/Descripción de las tareas/Búsqueda e investigación.tex
@@ -1,2 +1,20 @@
 \subsubsection{Búsqueda e investigación}\label{ssec:Descripción de las tareas}
 Esta sección detalla las tareas asociadas a la búsqueda e investigación necesarias para el desarrollo del proyecto.
+La suma de las horas de este bloque es de unas \textbf{50 horas}. Las tareas son: 
+\begin{itemize}
+    \item \textbf{BI-1. Estudio de las soluciones existentes:} Investigación y profundización en las herramientas ya implementadas en el 
+    IRB Barcelona (Slurm, SAP Business One, etc.) y en otras instituciones similares. Se estima la duración de esta tarea en \textbf{15 horas}.
+    \newline Esta tarea no tiene dependencias.
+    \newline Recursos: \textit {LaTeX, director del proyecto y documentación interna del centro.}
+    
+    \item \textbf{BI-2. Investigación de tecnologías y herramientas:} Investigación detallada de la documentación y APIs (Application 
+    Programming Interfaces) necesarias para la integración. Esto permite comprender las diferentes funcionalidades y 
+    aspectos que se pueden mejorar de las mismas. Se espera dedicar unas \textbf{30 horas}.
+    \newline Esta tarea no tiene dependencias.
+    \newline Recursos: \textit {LaTeX, director del proyecto y páginas especializadas de documentación.}
+    
+    \item \textbf{BI-3. Estudio de soluciones alternativas:} Análisis del Estado del Arte con un enfoque en la justificación de las herramientas seleccionadas.
+    Se investigan y comparan diferentes alternativas tecnológicas para asegurar que las herramientas elegidas son las más adecuadas para los objetivos del proyecto. Se estima una dedicación de unas \textbf{5 horas}.
+    \newline Esta tarea no tiene dependencias.
+    \newline Recursos: \textit {LaTeX, director del proyecto y páginas especializadas de documentación.}
+\end{itemize}
