--- a/Descripción de las tareas/Gestión del proyecto.tex
+++ b/Descripción de las tareas/Gestión del proyecto.tex
@@ -1,42 +1,50 @@
 \subsubsection{Gestión del proyecto}\label{ssec:Descripción de las tareas}
 Esta primera sección detalla las tareas asociadas a la gestión del proyecto.
-Se estima que la duración total de este bloque sea unas X horas. Las tareas que se van a realizar son las siguientes:
+Se estima que la duración total de este bloque sea de unas \textbf{138 horas}. Las tareas que se van a realizar son las siguientes:
 \begin{itemize}
     \item \textbf{GP-1. Contextualización y Alcance:} Elaboración de las secciones de la memoria asociadas 
-    al objetivo general del proyecto, contexto, objetivos específicos, alcance y limitaciones, así como la metodologia 
+    al objetivo general del proyecto, contexto, objetivos específicos, alcance y limitaciones, así como la metodología 
     a seguir durante el desarrollo del trabajo. Se estima una dedicación de unas \textbf{20 horas}.
+    \newline La tarea no tiene dependencias.
     \newline Recursos: \textit {LaTeX, director del proyecto y tutor de GEP.}
+    
     \item \textbf{GP-2. Planificación temporal:} Sección de la memoria que detalla la planificación y distribución temporal
     de las tareas a realizar. Se lista y explica cada una de las tareas que conforman la realización del proyecto. Además, se 
     proporciona una estimación de horas que tomará cada tarea así como un diagrama de Gantt que ilustra la distribución 
     temporal de las mismas y las dependencias entre ellas. Se estima una dedicación de unas \textbf{15 horas}. 
     \newline La tarea depende de la tarea GP-1.
-    \newline Recursos: \textit {LaTeX, director del proyecto, tutor de GEP y Gantt project.}
-    \item \textbf{GP-3. Gestión ecónomica y sostenibilidad:} Esta tarea se centra en la documentación de los costes y presupuestos 
+    \newline Recursos: \textit {LaTeX, director del proyecto, tutor de GEP y Gantt Project.}
+    
+    \item \textbf{GP-3. Gestión económica y sostenibilidad:} Esta tarea se centra en la documentación de los costes y presupuestos 
     asociados al proyecto. Se detallan los recursos materiales y humanos necesarios, así como una estimación de los costes 
     asociados. Además, se incluye una sección que aborda la sostenibilidad del proyecto, considerando aspectos ambientales, 
     sociales y económicos. Se estima una dedicación de unas \textbf{18 horas}. 
     \newline La tarea depende de la tarea GP-2.
     \newline Recursos: \textit {LaTeX, director del proyecto y tutor de GEP.}
+    
     \item \textbf{GP-4. Entrega final de GEP:} Redacción de la combinación de las tareas GP-1, GP-2 y GP-3 en un único documento, 
-    que constituirá una parte clave la memoria final del proyecto. Se estima una dedicación de unas \textbf{10 horas}. 
+    que constituirá una parte clave de la memoria final del proyecto. Se estima una dedicación de unas \textbf{10 horas}. 
     \newline La tarea depende de las tareas GP-1, GP-2 y GP-3.
     \newline Recursos: \textit {LaTeX, director del proyecto y tutor de GEP.}
+    
     \item \textbf{GP-5. Reuniones con el Director y el departamento:} A lo largo del desarrollo del proyecto, se llevarán 
     a cabo reuniones semanales, de aproximadamente media hora de duración, con el director del proyecto y personal del 
     departamento. Se estima una dedicación de unas \textbf{6 horas}. 
-    \newline Recursos: \textit {Papel y boli.}
-    \item \textbf{GP-6. Redacción de la memoria:} Elaboracion de la memoria final del proyecto, integrando todas las secciones
+    \newline Recursos: \textit {Papel y bolígrafo.}
+    
+    \item \textbf{GP-6. Redacción de la memoria:} Elaboración de la memoria final del proyecto, integrando todas las secciones
     desarrolladas a lo largo del trabajo. Se estima una dedicación de unas \textbf{45 horas}.
     \newline La tarea depende de todas las tareas definidas, tanto GP-x\footnote{a excepción de GP-7 y GP-8, ya que serían tareas 
     posteriores.} como BI-x como DP-x.
     \newline Recursos: \textit {LaTeX, director del proyecto y ponente del trabajo.}
+    
     \item \textbf{GP-7. Presentación de la defensa:} Una vez completada y entregada la memoria, se prepara la defensa del proyecto 
     con la antelación necesaria. Se estima una dedicación de unas \textbf{20 horas}.
     \newline La tarea depende de la tarea GP-6.
-    \newline Recursos: \textit {LaTeX y software de diseño de presentaciones}
+    \newline Recursos: \textit {LaTeX y software de diseño de presentaciones.}
+    
     \item \textbf{GP-8. Defensa del proyecto:}
-    Finalmente, se realiza la defensa del proyecto ante el tribunal correspondiente. Se estima una dedicación de unas \textbf{20 horas} 
+    Finalmente, se realiza la defensa del proyecto ante el tribunal correspondiente. Se estima una dedicación de unas \textbf{4 horas} 
     para todo el proceso.
     \newline La tarea depende de la tarea GP-7.
     \newline Recursos: \textit {LaTeX, software de diseño de presentaciones, director del proyecto, ponente del trabajo y tribunal.}
