ADD: tabla estimaciones + FIX typos

--- a/Descripción de las tareas/Búsqueda e investigación.tex
+++ b/Descripción de las tareas/Búsqueda e investigación.tex
@@ -1,4 +1,4 @@
-\subsubsection{Búsqueda e investigación}\label{ssec:Descripción de las tareas}
+\subsubsection{Búsqueda e investigación}
 Esta sección detalla las tareas asociadas a la búsqueda e investigación necesarias para el desarrollo del proyecto.
 La suma de las horas de este bloque es de unas \textbf{50 horas}. Las tareas son: 
 \begin{itemize}
