--- a/Descripción de las tareas/Gestión del proyecto.tex
+++ b/Descripción de las tareas/Gestión del proyecto.tex
@@ -1,8 +1,8 @@
-\subsubsection{Gestión del proyecto}\label{ssec:Descripción de las tareas}
+\subsubsection{Gestión del proyecto}
 Esta primera sección detalla las tareas asociadas a la gestión del proyecto.
 Se estima que la duración total de este bloque sea de unas \textbf{138 horas}. Las tareas que se van a realizar son las siguientes:
 \begin{itemize}
-    \item \textbf{GP-1. Contextualización y Alcance:} Elaboración de las secciones de la memoria asociadas 
+    \item \textbf{GP-1. Contextualización y alcance:} Elaboración de las secciones de la memoria asociadas 
     al objetivo general del proyecto, contexto, objetivos específicos, alcance y limitaciones, así como la metodología 
     a seguir durante el desarrollo del trabajo. Se estima una dedicación de unas \textbf{20 horas}.
     \newline La tarea no tiene dependencias.
@@ -24,17 +24,17 @@ Se estima que la duración total de este bloque sea de unas \textbf{138 horas}. 
     
     \item \textbf{GP-4. Entrega final de GEP:} Redacción de la combinación de las tareas GP-1, GP-2 y GP-3 en un único documento, 
     que constituirá una parte clave de la memoria final del proyecto. Se estima una dedicación de unas \textbf{10 horas}. 
-    \newline La tarea depende de las tareas GP-1, GP-2 y GP-3.
+    \newline La tarea depende de la tarea GP-3.
     \newline Recursos: \textit {LaTeX, director del proyecto y tutor de GEP.}
     
-    \item \textbf{GP-5. Reuniones con el Director y el departamento:} A lo largo del desarrollo del proyecto, se llevarán 
+    \item \textbf{GP-5. Reuniones con el director y el departamento:} A lo largo del desarrollo del proyecto, se llevarán 
     a cabo reuniones semanales, de aproximadamente media hora de duración, con el director del proyecto y personal del 
     departamento. Se estima una dedicación de unas \textbf{6 horas}. 
-    \newline Recursos: \textit {Papel y bolígrafo.}
+    \newline Recursos: \textit {Papel y bolígrafo, director del proyecto y personal del departamento..}
     
     \item \textbf{GP-6. Redacción de la memoria:} Elaboración de la memoria final del proyecto, integrando todas las secciones
     desarrolladas a lo largo del trabajo. Se estima una dedicación de unas \textbf{45 horas}.
-    \newline La tarea depende de todas las tareas definidas, tanto GP-x\footnote{a excepción de GP-7 y GP-8, ya que serían tareas 
+    \newline La tarea depende de todas las tareas definidas, tanto GP-x\footnote{a excepción de GP-7 y GP-8, porque son tareas 
     posteriores.} como BI-x como DP-x.
     \newline Recursos: \textit {LaTeX, director del proyecto y ponente del trabajo.}
     
