ADD: Diagrama de Gantt

--- a/Descripción de las tareas/Desarrollo del proyecto.tex
+++ b/Descripción de las tareas/Desarrollo del proyecto.tex
@@ -25,10 +25,10 @@ tendría una duración de unas \textbf{351 horas}. Las tareas son:
     \item \textbf{DP-4. Desarrollo del ETL:}  Tarea central que incluye: 1) La lógica de Transformación (T) para calcular la imputación proporcional de costes 
     según el uso de \textit{hardware}, utilizando los datos de DP-1 y DP-3. 2) La Carga (L), que es la integración automática de los resultados en el sistema 
     financiero SAP, utilizando el Service Layer (API de SAP Business One). Se estima una dedicación de unas \textbf{120 horas}.
-    \newline La tarea depende de la tarea DP-3.
+    \newline La tarea depende de las tareas DP-1 y DP-3.
     \newline Recursos: \textit {LaTeX, páginas especializadas de documentación y personal del departamento.}
     
-    \item \textbf{DP-5. Desarrollo del Dashboard en OpenOnDemand:}Implementación del \textit{front-end} de visualización. Creación de una interfaz en Open OnDemand 
+    \item \textbf{DP-5. Desarrollo del dashboard:}Implementación del \textit{front-end} de visualización. Creación de una interfaz en Open OnDemand 
     que permita a los usuarios (laboratorios y Core Facilities) consultar de manera sencilla sus cuotas de uso y los costes asociados calculados por el proceso ETL. Se estima 
     una dedicación de unas \textbf{50 horas}.
     \newline La tarea depende de la tarea DP-4.
