--- a/Estimaciones/main.tex
+++ b/Estimaciones/main.tex
@@ -27,8 +27,8 @@
         DP-1 & Obtención de datos de almacenaje & 30 h & - \\
         DP-2 & Modificación de los plugins de Slurm & 65 h & - \\
         DP-3 & Obtención de datos de cómputo & 45 h & DP-2 \\
-        DP-4 & Desarrollo del ETL & 120 h & DP-3 \\
-        DP-5 & Desarrollo del Dashboard en OpenOnDemand & 50 h & DP-4 \\
+        DP-4 & Desarrollo del ETL & 120 h & DP-1 DP-3 \\
+        DP-5 & Desarrollo del dashboard & 50 h & DP-4 \\
         DP-6 & Pruebas y validación & 25 h & DP-5 \\
         DP-7 & Despliegue en entorno productivo & 16 h & DP-6 \\
         \hline
