--- a/Diagrama de Gantt/main.tex
+++ b/Diagrama de Gantt/main.tex
@@ -1,1 +1,15 @@
+\begin{landscape}
 \subsection{Diagrama de Gantt}
+
+\graphicspath{ {Diagrama de Gantt/figures/} }
+
+\begin{figure}[!ht]
+    \centering
+    % height=\textheight ajusta la altura al área de texto disponible
+    % keepaspectratio asegura que la imagen no se distorsione
+    \includegraphics[height=0.8\textheight,keepaspectratio]{TFG-Gantt.png}
+    \caption{Diagrama de Gantt del TFG.}
+    \label{fig:gantt}
+\end{figure}
+
+\end{landscape}
