Cambio de Directorio + inicio de ADD LL1

--- a/Planificación temporal/Diagrama de Gantt/main.tex
+++ b/Planificación temporal/Diagrama de Gantt/main.tex
@@ -1,14 +1,14 @@
 \begin{landscape}
 \subsection{Diagrama de Gantt}
 
-\graphicspath{ {Diagrama de Gantt/figures/} }
+\graphicspath{ {Planificación temporal/Diagrama de Gantt/figures/} }
 
 \begin{figure}[!ht]
     \centering
     % height=\textheight ajusta la altura al área de texto disponible
     % keepaspectratio asegura que la imagen no se distorsione
     \includegraphics[height=0.8\textheight,keepaspectratio]{TFG-Gantt.png}
-    \caption{Diagrama de Gantt del TFG.}
+    \caption{Diagrama de Gantt. Elaboración propia.}
     \label{fig:gantt}
 \end{figure}
 
