--- a/main.tex
+++ b/main.tex
@@ -380,23 +380,9 @@
 % \setcounter{page}{11}
 \include{toc}
 % \cleardoublepage
-\section{Planificación temporal}
-Esta sección del documento detalla de manera exhaustiva la carga de trabajo prevista, 
-así como la estimación temporal de cada una de las tareas que componen el proyecto.
+\input{Contexto y alcance/main}
 
-La fecha de inicio del proyecto es el 16 de septiembre de 2025 y la fecha de finalización 
-prevista es el 20 de enero de 2026, fecha que coincide con el inicio de las defensas de los 
-proyectos matriculados en el cuatrimestre de otoño del curso 2025-2026.
-
-Se estima una dedicación diaria de 7 horas de lunes a viernes, lo que supone una dedicación 
-semanal de 35 horas. Estas cifras pueden variar, ya que en algunos momentos del proyecto se 
-requerirá una mayor dedicación. En total, se espera que la realización completa del proyecto 
-abarque unas 595 horas.
-
-\input{Descripción de las tareas/main}
-\input{Estimaciones/main}
-\input{Diagrama de Gantt/main}
-\input{Gestión del riesgo/main}
+\input{Planificación temporal/main}
 
 % \cleardoublepage
 
